--- a/index.html
+++ b/index.html
@@ -38,19 +38,7 @@
         <nav class="container mx-auto px-4 py-4 flex items-center justify-between">
             <a href="#" class="text-3xl font-bold text-indigo-400">Conceptual<span class="text-purple-400">Casino</span></a>
             <div class="flex items-center space-x-6">
-                <!-- PWA Installation Button in Nav -->
-                <div id="pwa-install-container" class="hidden">
-                    <button id="install-button" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded-full shadow-md transition-transform duration-300 transform hover:scale-105 text-sm">
-                        Install App
-                    </button>
-                </div>
-                <!-- iOS Instructions in Nav -->
-                <div id="ios-instructions" class="hidden">
-                    <p class="text-xs text-indigo-300 font-semibold text-right">
-                        Tap <span class="font-bold">Share</span> then <br><span class="font-bold">"Add to Home Screen"</span>
-                    </p>
-                </div>
-                <a href="#" class="text-sm font-semibold hover:text-indigo-300 transition-colors duration-200 hidden sm:block">Log in</a>
+                <a href="#" class="text-sm font-semibold hover:text-indigo-300 transition-colors duration-200">Log in</a>
                 <a href="#" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-6 rounded-full transition-transform duration-300 transform hover:scale-105 text-sm">Register</a>
             </div>
         </nav>
@@ -64,7 +52,19 @@
             <div class="absolute inset-0 flex flex-col items-center justify-center text-center p-4 z-10">
                 <h2 class="text-3xl md:text-6xl font-extrabold text-white leading-tight">WIN BIG TODAY</h2>
                 <p class="text-lg md:text-xl text-indigo-200 mt-2">Discover a world of endless entertainment.</p>
-                <button class="bg-yellow-400 hover:bg-yellow-500 text-black font-bold py-3 px-8 rounded-full mt-6 shadow-lg transition-transform duration-300 transform hover:scale-105">
+                <!-- PWA Installation Button on mobile, hidden on larger screens -->
+                <div id="pwa-install-container" class="mt-4 w-full px-4 md:hidden">
+                    <button id="install-button" class="w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-4 rounded-full shadow-lg transition-transform duration-300 transform hover:scale-105 text-base">
+                        Install App
+                    </button>
+                </div>
+                <!-- iOS Instructions on mobile, hidden on larger screens -->
+                <div id="ios-instructions" class="hidden mt-4 w-full">
+                    <p class="text-xs text-indigo-300 font-semibold text-center">
+                        Tap the <span class="font-bold">Share</span> icon then <br><span class="font-bold">"Add to Home Screen"</span>
+                    </p>
+                </div>
+                <button class="bg-yellow-400 hover:bg-yellow-500 text-black font-bold py-3 px-8 rounded-full mt-6 shadow-lg transition-transform duration-300 transform hover:scale-105 hidden md:block">
                     Explore Games
                 </button>
             </div>
