--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <header class="w-full bg-black bg-opacity-50 backdrop-blur-md shadow-lg text-white fixed top-0 left-0 z-50">
         <nav class="container mx-auto px-4 py-4 flex items-center justify-between">
             <a href="#" class="text-xl sm:text-3xl font-bold text-indigo-400">Conceptual<span class="text-purple-400">Casino</span></a>
-            <div class="flex items-center space-x-6">
-                <a href="#" class="text-sm font-semibold hover:text-indigo-300 transition-colors duration-200">Log in</a>
-                <a href="#" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-6 rounded-full transition-transform duration-300 transform hover:scale-105 text-sm">Register</a>
+            <div class="flex items-center space-x-2 sm:space-x-6">
+                <a href="#" class="text-xs sm:text-sm font-semibold hover:text-indigo-300 transition-colors duration-200">Log in</a>
+                <a href="#" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 sm:px-6 rounded-full transition-transform duration-300 transform hover:scale-105 text-xs sm:text-sm">Register</a>
             </div>
         </nav>
     </header>
