--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h2 class="text-3xl md:text-6xl font-extrabold text-white leading-tight">WIN BIG TODAY</h2>
                 <p class="text-lg md:text-xl text-indigo-200 mt-2">Discover a world of endless entertainment.</p>
                 <!-- PWA Installation Button on mobile, hidden on larger screens -->
-                <div id="pwa-install-container" class="mt-4 w-full px-4 md:hidden">
+                <div id="pwa-install-container" class="mt-4 w-full px-4 md:hidden hidden">
                     <button id="install-button" class="w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-4 rounded-full shadow-lg transition-transform duration-300 transform hover:scale-105 text-base">
                         Install App
                     </button>
@@ -167,7 +167,7 @@
             e.preventDefault();
             // Store the event so we can trigger it later.
             deferredPrompt = e;
-            // Show the install button container.
+            // Only show the install button if the app is not already installed.
             if (!isInstalled()) {
                 pwaInstallContainer.classList.remove('hidden');
             }
@@ -188,6 +188,13 @@
                     deferredPrompt = null;
                 });
             }
+        });
+
+        // Event listener for when the app is successfully installed
+        window.addEventListener('appinstalled', (e) => {
+            console.log('App was installed');
+            // Hide the install button container if the user installs it.
+            pwaInstallContainer.classList.add('hidden');
         });
 
         // Handle the page load based on the device
