--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h2 class="text-3xl md:text-6xl font-extrabold text-white leading-tight">WIN BIG TODAY</h2>
                 <p class="text-lg md:text-xl text-indigo-200 mt-2">Discover a world of endless entertainment.</p>
                 <!-- PWA Installation Button on mobile, hidden on larger screens -->
-                <div id="pwa-install-container" class="mt-4 w-full px-4 md:hidden hidden">
+                <div id="pwa-install-container" class="mt-4 w-full px-4 hidden">
                     <button id="install-button" class="w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-4 rounded-full shadow-lg transition-transform duration-300 transform hover:scale-105 text-base">
                         Install App
                     </button>
