--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body class="min-h-screen flex flex-col">
 
     <!-- App Installed Banner -->
-    <div id="app-installed-banner" class="hidden w-full bg-green-500 text-white text-center py-2 px-4 text-sm font-semibold sticky top-0 z-50">
+    <div id="app-installed-banner" class="hidden w-full bg-green-500 text-white text-center py-2 px-4 text-base font-bold sticky top-0 z-50">
         You are running the installed version of the app.
     </div>
 
@@ -57,13 +57,13 @@
             <div class="absolute inset-0 flex flex-col items-center justify-center text-center p-4 z-10">
                 <h2 class="text-3xl md:text-6xl font-extrabold text-white leading-tight">WIN BIG TODAY</h2>
                 <p class="text-lg md:text-xl text-indigo-200 mt-2">Discover a world of endless entertainment.</p>
-                <!-- PWA Installation Button on mobile, hidden on larger screens -->
+                <!-- PWA Installation Button -->
                 <div id="pwa-install-container" class="mt-4 w-full px-4">
                     <button id="install-button" class="w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-4 rounded-full shadow-lg transition-transform duration-300 transform hover:scale-105 text-base">
                         Install App
                     </button>
                 </div>
-                <!-- iOS Instructions on mobile, hidden on larger screens -->
+                <!-- iOS Instructions -->
                 <div id="ios-instructions" class="hidden mt-4 w-full">
                     <p class="text-xs text-indigo-300 font-semibold text-center">
                         Tap the <span class="font-bold">Share</span> icon then <br><span class="font-bold">"Add to Home Screen"</span>
