adding version footer

--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
         
     </main>
 
+    <!-- Footer with Version Number -->
+    <footer class="w-full text-center py-4 text-gray-400 text-xs mt-auto">
+        <p>Conceptual Casino App | Version 1.2.0</p>
+    </footer>
+
     <script>
         // Use a variable to store the beforeinstallprompt event.
         let deferredPrompt;
