--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <!-- Top Navigation Section -->
-    <header class="w-full bg-black bg-opacity-50 backdrop-blur-md shadow-lg text-white top-0 left-0 z-50">
+    <header class="w-full bg-black bg-opacity-50 backdrop-blur-md shadow-lg text-white fixed top-0 left-0 z-50">
         <nav class="container mx-auto px-4 py-4 flex items-center justify-between">
             <a href="#" class="text-xl sm:text-3xl font-bold text-indigo-400">Conceptual<span class="text-purple-400">Casino</span></a>
             <div class="flex items-center space-x-2 sm:space-x-6">
@@ -58,7 +58,7 @@
                 <h2 class="text-3xl md:text-6xl font-extrabold text-white leading-tight">WIN BIG TODAY</h2>
                 <p class="text-lg md:text-xl text-indigo-200 mt-2">Discover a world of endless entertainment.</p>
                 <!-- PWA Installation Button -->
-                <div id="pwa-install-container" class="mt-4 w-full px-4">
+                <div id="pwa-install-container" class="mt-4 w-full px-4 hidden">
                     <button id="install-button" class="w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-4 rounded-full shadow-lg transition-transform duration-300 transform hover:scale-105 text-base">
                         Install App
                     </button>
@@ -150,7 +150,7 @@
 
     <!-- Footer with Version Number -->
     <footer class="w-full text-center py-4 text-gray-400 text-xs mt-auto">
-        <p>Conceptual Casino App | Version 1.2.3</p>
+        <p>Conceptual Casino App | Version 1.2.4</p>
     </footer>
 
     <script>
