--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 <body class="min-h-screen flex flex-col">
 
     <!-- App Installed Banner -->
-    <div id="app-installed-banner" class="hidden w-full bg-green-500 text-white text-center py-2 px-4 text-base font-bold sticky top-0 z-50">
+    <div id="app-installed-banner" class="hidden w-full bg-green-500 text-white text-center py-2 px-4 text-base font-bold top-0 z-50">
         You are running the installed version of the app.
     </div>
 
     <!-- Top Navigation Section -->
-    <header class="w-full bg-black bg-opacity-50 backdrop-blur-md shadow-lg text-white fixed top-0 left-0 z-50">
+    <header class="w-full bg-black bg-opacity-50 backdrop-blur-md shadow-lg text-white top-0 left-0 z-50">
         <nav class="container mx-auto px-4 py-4 flex items-center justify-between">
             <a href="#" class="text-xl sm:text-3xl font-bold text-indigo-400">Conceptual<span class="text-purple-400">Casino</span></a>
             <div class="flex items-center space-x-2 sm:space-x-6">
